--- a/react-cube-animation/package.json
+++ b/react-cube-animation/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.13.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "gsap": "^3.12.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
